Change title from 'Slarmoo's Box 404' to 'TuneBox 404'

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <link rel='shortcut icon' type='image/x-icon' href='https://slarmoo.github.io/slarmoosbox/website/favicon.ico' /> 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Slarmoo's Box 404</title>
+    <title>TuneBox 404</title>
     <meta name="application-name" content="Slarmoo's Box" />
     <meta name="apple-mobile-web-app-title" content="Slarmoo's Box">
     <meta name="description" content="Snake Game" />
