--- a/404.html
+++ b/404.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TuneBox 404</title>
-    <meta name="application-name" content="Slarmoo's Box" />
-    <meta name="apple-mobile-web-app-title" content="Slarmoo's Box">
+    <meta name="application-name" content="TuneBox" />
+    <meta name="apple-mobile-web-app-title" content="TuneBox">
     <meta name="description" content="Snake Game" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="theme-color" content="#247d1d" />
-    <meta name="msapplication-TileColor" content="#247d1d" />
+    <meta name="msapplication-TileColor" content="#4843de" />
     <meta name="msapplication-config" content="/browserconfig.xml" />
     <meta name="format-detection" content="telephone=no" />
     <meta property="og:image" content="https://slarmoo.github.io/slarmoosbox/website/icon_shadow_192.png">
